--- a/infras/auth/pom.xml
+++ b/infras/auth/pom.xml
@@ -2,21 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
-        <groupId>team.uni.apollo.basic</groupId>
         <artifactId>basic-parent</artifactId>
+        <groupId>team.uni.apollo.basic</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <artifactId>infras</artifactId>
-    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>auth</artifactId>
+    <packaging>pom</packaging>
     <modules>
-        <module>registry</module>
-        <module>gateway</module>
+        <module>auth-starter</module>
+        <module>auth-service</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
