--- a/modules/job/pom.xml
+++ b/modules/job/pom.xml
@@ -2,21 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
+        <artifactId>modules</artifactId>
         <groupId>team.uni.apollo.basic</groupId>
-        <artifactId>basic-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>infras</artifactId>
-    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
-    <modules>
-        <module>registry</module>
-        <module>gateway</module>
-    </modules>
+    <artifactId>job</artifactId>
+    <packaging>pom</packaging>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
