--- a/modules/system/pom.xml
+++ b/modules/system/pom.xml
@@ -3,25 +3,22 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>infras</artifactId>
+        <artifactId>modules</artifactId>
         <groupId>team.uni.apollo.basic</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>dbms</artifactId>
 
-    <properties>
-        <dockerfile.dir>.</dockerfile.dir>
-    </properties>
+    <artifactId>system</artifactId>
+    <packaging>pom</packaging>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>system-client</module>
+        <module>system-dal</module>
+        <module>system-integration</module>
+        <module>system-service</module>
+        <module>system-web</module>
+        <module>system-starter</module>
+    </modules>
 
 </project>
